# derivesupercoolgetter

./: Cargo.toml  README.md
crates/derivesupercoolgetter/: Cargo.toml  lib.rs
crates/derivesupercoolgetter_derive/: Cargo.toml  aaa.rs  derive_impl.rs  lib.rs
crates/supercoolexample/: Cargo.toml  main.rs
