[workspace]
members = [
    "crates/derivesupercoolgetter",
    "crates/derivesupercoolgetter_derive",
    "crates/supercoolexample",
]
resolver = "3"

[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
derivesupercoolgetter_derive.path = "crates/derivesupercoolgetter_derive"
guard_macros = "1.0.2"

convert_case = "0.8.0"
