[package]
name = "derivesupercoolgetter_derive"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
guard_macros.workspace = true
convert_case.workspace = true
itertools.workspace = true

proc-macro2.workspace = true
proc-macro-error2.workspace = true
syn.workspace = true
quote.workspace = true
